--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="sbar-ctn">
           <section id="sbar-maps" class="sbar-listing active">
             <div class="listing-focus">
-              <img src="" alt="">
+              <img class="listing-temp" src="./src/static/css/vendors/imgs/icons/select.svg" alt="">
             </div>
           </section>
 
