index.html: Radio buttons added for search function

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                       />
                     </label>
 
+                    <div id="search-transport-ctn">
+                      <input type="radio" id="search-drive" name="transport" value="drive">
+                      <label for="drive">Drive</label>
+
+                      <input type="radio" id="search-walk" name="transport" value="walk">
+                      <label for="walk">Walk</label>
+                    </div>
+                    
+
                     <button id="search-btn" type="button">Search Route</button>
                   </form>
 
