Final Checks: Last commit before dateline

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                     </label>
 
                     <div id="search-transport-ctn">
-                      <input type="radio" id="search-drive" name="transport" value="drive">
+                      <input type="radio" class="search-transport-radio" name="transport" value="drive">
                       <label for="drive">Drive</label>
 
-                      <input type="radio" id="search-walk" name="transport" value="walk">
+                      <input type="radio" class="search-transport-radio" name="transport" value="walk">
                       <label for="walk">Walk</label>
                     </div>
                     
