index.html: Changed title to Airbnb Listing Visualiser

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <link rel="stylesheet" href="./src/static/css/main.css" />
-    <title>Trent Global Project 1</title>
+    <title>Airbnb Listing Visualiser</title>
   </head>
   <body id="airbnb">
     
